--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.0.8",
+    "dotenv": "^17.0.0",
     "typescript": "^5.8.3",
     "vitest": "^3.2.4"
   },
