--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
   "bugs": {
     "url": "https://github.com/nvrtmd/octoreport/issues"
   },
-  "homepage": "https://github.com/nvrtmd/octoreport#readme"
+  "homepage": "https://github.com/nvrtmd/octoreport#readme",
+  "dependencies": {
+    "zod": "^3.25.67"
+  }
 }
