--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["src", "tests", "vitest.config.ts", "lint-staged.config.cjs"],
+  "include": ["src", "tests", "vitest.config.ts", "lint-staged.config.cjs", "tsup.config.ts"],
   "exclude": ["node_modules", "dist"]
 }
