--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "homepage": "https://github.com/nvrtmd/octoreport#readme",
   "dependencies": {
+    "inquirer": "^12.7.0",
     "zod": "^3.25.67"
   }
 }
