--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@types/node": "^24.0.8",
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
-    "dotenv": "^17.0.0",
     "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.32.0",
@@ -56,6 +55,7 @@
   },
   "homepage": "https://github.com/nvrtmd/octoreport#readme",
   "dependencies": {
+    "@octokit/auth-oauth-device": "^8.0.1",
     "inquirer": "^12.7.0",
     "zod": "^3.25.67"
   }
