--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "octoreport": "./dist/cli.js"
   },
   "devDependencies": {
+    "@types/luxon": "^3.6.2",
     "@types/node": "^24.0.8",
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
@@ -58,6 +59,7 @@
     "@octokit/auth-oauth-device": "^8.0.1",
     "inquirer": "^12.7.0",
     "keytar": "^7.9.0",
+    "luxon": "^3.7.1",
     "zod": "^3.25.67"
   }
 }
