--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/node": "^24.0.8",
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
+    "dotenv": "^17.2.0",
     "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.32.0",
@@ -58,7 +59,6 @@
   },
   "dependencies": {
     "@octokit/auth-oauth-device": "^8.0.1",
-    "keytar": "^7.9.0",
     "luxon": "^3.7.1",
     "zod": "^3.25.67"
   }
